add chips img, add description

--- a/chips.html
+++ b/chips.html
@@ -1,5 +1,5 @@
 <h1>Homestyle Potato Chips</h1>
-<img src="./img/image.jpeg">
+<img src="./img/chips.webp">
 <h2>Description</h2>
 <p> Homemade potato chips are fun and easy. Guaranteed they won't last long! 
     A food processor with a slicing attachment is very helpful for slicing the 
