--- a/chips.html
+++ b/chips.html
@@ -7,4 +7,9 @@
     thinner. I like to use olive oil for frying, but you can use safflower, 
     corn, or peanut oil as well as vegetable oil.</p>
     <h2>Ingredients</h2>
-    
+    <ul style="list-style-type:square">
+        <li>4 medium potatoes, peeled and sliced paper-thin</li>
+        <li>3 tablespoons salt, plus more to taste</li>
+        <li>1 quart oil for deep frying</li>
+    </ul>
+    <h2>Steps</h2>
