Set chiken recipe page w/index.html link Set chicken.jpeg Set description

--- a/chips.html
+++ b/chips.html
@@ -25,3 +25,4 @@
             slices are fried.</li>
         <li>Season potato chips with additional salt if desired.</li>
     </ol>
+    <a href="index.html">Back</a>
