--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <title> My Recipes</title>
     </head>
     <h1>Odin Recipes</h1>
-    <a href="chips.html">Homestyle Potato Chips</a>
+    <p><a href="chips.html">Homestyle Potato Chips</a></p>
+    <p><a href="chikn.html">Honey Mustard Grilled Chicken</a></p>
 </html>
