set chicken ingredients set chicken steps set back link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title> My Recipes</title>
     </head>
     <h1>Odin Recipes</h1>
-    <p><a href="chips.html">Homestyle Potato Chips</a></p>
-    <p><a href="chikn.html">Honey Mustard Grilled Chicken</a></p>
+    <p><a href="pages/chips.html">Homestyle Potato Chips</a></p>
+    <p><a href="pages/chikn.html">Honey Mustard Grilled Chicken</a></p>
 </html>
