--- a/pages/chips.html
+++ b/pages/chips.html
@@ -1,5 +1,5 @@
 <h1>Homestyle Potato Chips</h1>
-<img src="./img/chips.webp">
+<img src="../img/chips.webp">
 <h2>Description</h2>
 <p> Homemade potato chips are fun and easy. Guaranteed they won't last long! 
     A food processor with a slicing attachment is very helpful for slicing the 
@@ -25,4 +25,4 @@
             slices are fried.</li>
         <li>Season potato chips with additional salt if desired.</li>
     </ol>
-    <a href="index.html">Back</a>
+    <a href="../index.html">Back</a>
