set choc page set choc img set choc ingredients set choc steps set back ahref link

--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
     <h1>Odin Recipes</h1>
     <p><a href="pages/chips.html">Homestyle Potato Chips</a></p>
     <p><a href="pages/chikn.html">Honey Mustard Grilled Chicken</a></p>
+    <p><a href="pages/choc.html">Big,Fat,Chewy,Chocolate Chip Cookies</a></p>
 </html>
