--- a/pages/chikn.html
+++ b/pages/chikn.html
@@ -11,6 +11,7 @@
         <li>1 teaspoon steak sauce</li>
         <li>4 skinless, boneless chicken breast halves</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Preheat the grill for medium heat.</li>
         <li>In a shallow bowl, mix the mustard, honey, mayonnaise, and steak 
